--- a/src/App.css
+++ b/src/App.css
@@ -1,43 +1,119 @@
-.App {
+html {
+  overflow-y: scroll;
+}
+
+body {
+  background: #c94b4b;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #4b134f, #c94b4b);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #4b134f, #c94b4b); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  font-family: 'Courier New';
   text-align: center;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+ }
 
 .cards {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  grid-gap: 30px;
+  grid-gap: 20px 30px;
   max-width: 960px;
   margin: 0 auto 30px;
+  margin-top: 5%;
 }
 
 .item {
   position: relative;
+  color: #e4d4d4;
+  font-size: 20px;
+  text-shadow: 4px 4px 3px #1C1C1C;
 }
 
 img {
   object-fit: cover;
+}
+
+input {
+  width: 50%;
+  font-size: 30px;
+  top: 50%;
+  left: 50%;
+  background: #cfafaf;
+  margin-top: 5%; 
+  padding: 15px;
+  border: 2px solid #cfafaf;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: 100;
+}
+
+img, input {
+  -webkit-box-shadow: 7px 9px 18px -3px #000000; 
+  box-shadow: 7px 9px 18px -3px #000000;
+}
+
+p {
+  margin-top: 3%;
+}
+
+.no_results {
+  color: #e4d4d4;
+  font-size: 200%;
+  font-weight: 500;
+}
+
+
+.lds-ring {
+  margin-top: 10%;
+  left: 50%; 
+  position: relative;
+  width: 64px;
+  height: 64px;
+}
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 51px;
+  height: 51px;
+  margin: 6px;
+  border: 6px solid #cfafaf;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #cfafaf transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+
+@media only screen and (max-width: 960px) {
+  input {
+    width: 80%;
+    font-size: 16px;
+    font-weight: 700;
+  }
+  
+  .item {
+    text-shadow: 2px 2px 3px #1C1C1C;
+  }
+
+  .no_results {
+    margin-top: 20%;
+  }
+
+  .lds-ring {
+    margin-top: 30%;
+    left: 43%; 
+  }
 }
